risma (fitur): menambahkan template engine

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -7,4 +7,4 @@
     <input type="password" placeholder="Password" class="mb-5">
     <button type="button" class="d-block mt-5">Login</button>
 </form>
-<a href="" class="mt-3">Don't have any Account? Sign Up</a>
+<a href="/register" class="mt-3">Don't have any Account? Sign Up</a>
