--- a/views/layout/profile.hbs
+++ b/views/layout/profile.hbs
@@ -18,11 +18,7 @@
 </head>
 
 <body>
-    <nav>
-        <h1 class="fs-6 fw-bold"> {{title}} </h1>
-    </nav>
-
-    <div class="center-element nav-margin">
+    <div class="center-element">
         {{{body}}}
     </div>
 
