habis menambahkan fitur login register

--- a/views/page5.hbs
+++ b/views/page5.hbs
@@ -1,4 +1,4 @@
 <div> 
-    <a class="d-block mt-0 fw-normal">Schedule Reminder</a>
-    <a class="d-block mt-2 fw-normal">History</a>
+    <a href= "schedule/{{id}}" class="d-block mt-0 fw-normal">Schedule Reminder</a>
+    <a href= "/history/{{id}}" class="d-block mt-2 fw-normal">History</a>
 </div>
