--- a/views/layout/profile.hbs
+++ b/views/layout/profile.hbs
@@ -20,6 +20,13 @@
 <body>
     <div class="center-element">
         {{{body}}}
+
+        <section class="d-flex justify-content-between align-items-center">
+            <a href=""><img src="/img/icon_home_border.svg" alt=""></a>
+            <a href=""><img src="/img/icon_device_border.svg" alt=""></a>
+            <a href=""><img src="/img/icon_user_border.svg" alt=""></a>
+        </section>
+
     </div>
 
 </body>
@@ -29,6 +36,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
 </script>
+<script src="/js/util/httpRequest.js"></script>
 {{#if scripts}}
     {{#each scripts}}
         <script src="{{this}}"></script>
