--- a/views/login.hbs
+++ b/views/login.hbs
@@ -3,8 +3,8 @@
     <p>Login to your account.</p>
 </div>
 <form>
-    <input type="text" placeholder="Username" class="mb-4">
-    <input type="password" placeholder="Password" class="mb-5">
-    <button type="button" class="d-block mt-5">Login</button>
+    <input type="text" placeholder="Username" class="mb-4" id="username">
+    <input type="password" placeholder="Password" class="mb-5" id="password">
+    <button type="button" class="d-block mt-5" id="btn">Login</button>
 </form>
 <a href="/register" class="mt-3">Don't have any Account? Sign Up</a>
