--- a/views/page2.hbs
+++ b/views/page2.hbs
@@ -4,16 +4,20 @@
             <img src="/img/Profile.jpg" alt="">
         </div>
     </div>
-    <h1 class="text-secondary-color-1 fs-5 mt-2">Kim Jong In</h1>
+    <h1 class="text-secondary-color-1 fs-5 mt-2" id="fullName">Loading</h1>
 </div>
 <div class="detail-container bg-secondary-color-3 mx-5 my-5 p-5 rounded-16">
     <h6 class="fw-light">Username</h6>
-    <h6>Kim Jong Un</h6>
+    <h6 id="username">Loading</h6>
+
+    <h6 class="mt-3 fw-light">Email</h6>
+    <h6 id="email">Loading</h6>
 
     <h6 class="mt-3 fw-light">Password</h6>
     <h6>*******</h6>
+
 </div>
 <div class="d-flex justify-content-end">
-    <a class="mx-5 text-decoration-none bg-danger text-secondary-color-1 px-3 py-2 rounded-3">Logout</a>
+    <a href="/logout" class="mx-5 text-decoration-none bg-danger text-secondary-color-1 px-3 py-2 rounded-3">Logout</a>
 
 </div>
