--- a/views/register.hbs
+++ b/views/register.hbs
@@ -3,10 +3,9 @@
     <p>Sign up your account.</p>
 </div>
 <form>
-    <input type="text" placeholder="Username" class="mb-4">
-    <input type="email" placeholder="Email" class="mb-4">
-    <input type="password" placeholder="Password" class="mb-4">
-    <input type="confirmpass" placeholder="Confirm Password" class="mb-5">
-    <button type="button" class="d-block mt-3">Sign Up</button>
+    <input type="text" placeholder="Username" class="mb-4" id="username">
+    <input type="email" placeholder="Email" class="mb-4" id="email">
+    <input type="password" placeholder="Password" class="mb-4" id="password">
+    <button type="button" class="d-block mt-3" id="button">Sign Up</button>
 </form>
 <a href="/login" class="mt-3">Already have an account? Login</a>
