feat(dimas): menambahkan middleware untuk memeriksa apakah pengguna sudah memiliki perangkat

--- a/views/layout/profile.hbs
+++ b/views/layout/profile.hbs
@@ -22,9 +22,9 @@
         {{{body}}}
 
         <section class="d-flex justify-content-between align-items-center">
-            <a href=""><img src="/img/icon_home_border.svg" alt=""></a>
-            <a href=""><img src="/img/icon_device_border.svg" alt=""></a>
-            <a href=""><img src="/img/icon_user_border.svg" alt=""></a>
+            <a href="/"><img src="/img/icon_home_border.svg" alt=""></a>
+            <a href="/link-device"><img src="/img/icon_device_border.svg" alt=""></a>
+            <a href="/profile"><img src="/img/icon_user_border.svg" alt=""></a>
         </section>
 
     </div>
