menambahkan fitur linkdevice

--- a/views/page3.hbs
+++ b/views/page3.hbs
@@ -1,9 +1,14 @@
-<h6 class="mb-2 mt-4 fw-regular">Box ID</h6>
+<h6 class="mb-2 mt-4 fw-regular">Name</h6>
 <form>
-    <input type="text" placeholder="Box ID" class="mb-4">
+    <input type="text" placeholder="Name" class="mb-4" id="name">
+</form>
+
+<h6 class="mb-2 fw-regular">Box ID</h6>
+<form>
+    <input type="text" placeholder="Box ID" class="mb-4" id="boxid">
 </form>
 <h6 class="mb-2 fw-regular">Bracelet ID</h6>
 <form>
-    <input type="text" placeholder="Bracelet ID" class="mb-4">
+    <input type="text" placeholder="Bracelet ID" class="mb-4" id="braceletid">
 </form>
-<button type="button" class="d-block mt-1">Submit</button>
+<button type="button" class="d-block mt-1" id="btn">Submit</button>
