--- a/views/page4.hbs
+++ b/views/page4.hbs
@@ -5,35 +5,11 @@
     <div class="circle">
         <div class="circletwo">
             <div class="text-center">
-                <h1 class="fs-1 fw-bold">31</h1>
+                <h1 class="fs-1 fw-bold" id="temp">~</h1>
             </div>
         </div>
     </div>
 </div>
-<div class="box-container d-flex flex-wrap justify-content-between"> 
-    <div class="box-weight bg-main-color-1 m-3 rounded-16"> 
-        <div class="weight-number p-1 d-flex align-items-center justify-content-center">
-            <div class="text-gram d-flex align-items-end">
-                <h6 class="fw-regular weight-med fw-semibold text-secondary-color-1 me-1"> 1  </h6>
-                <h6 class="fw-regular fw-semibold text-secondary-color-1 mb-2"> Gr </h6>
-            </div>
-        </div>
-        <a href="options/1" class="button-box bg-main-color-3 rounded-16 p-3 d-flex align-items-center justify-content-between">
-            <h6 class="fw-regular text-center text-secondary-color-1"> Box 1 </h6>
-            <img src="/img/Icon.svg" alt="">
-        </a>
-    </div>
-    <div class="box-weight bg-main-color-1 m-3 rounded-16">
-        <div class="weight-number p-1 d-flex align-items-center justify-content-center">
-            <div class="text-gram d-flex align-items-end">
-                <h6 class="fw-regular weight-med fw-semibold text-secondary-color-1 me-1"> 1  </h6>
-                <h6 class="fw-regular fw-semibold text-secondary-color-1 mb-2"> Gr </h6>
-            </div>
-        </div>
-        <a href="options/2" class="button-box bg-main-color-3 rounded-16 p-3 d-flex align-items-center justify-content-between">
-            <h6 class="fw-regular text-center text-secondary-color-1"> Box 2 </h6>
-            <img src="/img/Icon.svg" alt="">
-        </a>
-    </div>
-        
+<div class="box-container d-flex flex-wrap justify-content-between" id="container"> 
+
 </div>
