--- a/views/page5.hbs
+++ b/views/page5.hbs
@@ -1,4 +1,4 @@
-<div> 
-    <a href= "schedule/{{id}}" class="d-block mt-0 fw-normal">Schedule Reminder</a>
+<div class="link"> 
+    <a href= "/options/schedule/{{id}}" class="d-block mt-0 fw-normal">Schedule Reminder</a>
     <a href= "/history/{{id}}" class="d-block mt-2 fw-normal">History</a>
 </div>
