--- a/public/style/page5.css
+++ b/public/style/page5.css
@@ -1,9 +1,10 @@
-a {
+.link>a {
     all: unset;
     background: var(--main-color-2);
     border-radius: 24px;
     box-sizing: border-box;
     color: var(--secondary-color-1);
+    cursor: pointer;
     font-weight: 600;
     padding: 10px;
     text-align: center;
