--- a/views/page4.hbs
+++ b/views/page4.hbs
@@ -10,6 +10,6 @@
         </div>
     </div>
 </div>
-<div class="box-container d-flex flex-wrap justify-content-between" id="container"> 
+<div class="box-container d-flex flex-wrap justify-content-between mb-5" id="container"> 
 
 </div>
