--- a/views/page6.hbs
+++ b/views/page6.hbs
@@ -1,4 +1,5 @@
  <p class="hidden" id="box-id" data-id="{{id}}"></p>
+ <p class="hidden" id="reminder-id"></p>
  <form class="bg-secondary-color-2 p-3 rounded-9">
     <label for="medicineName" class="fs-6 fw-bold">Medicine Name</label>
     <input type="text" name="" id="medicine" class="py-1 px-2 mt-3">
@@ -105,9 +106,9 @@
 
 <div class="d-flex justify-content-between hidden mb-5" id="modify-container">
     <button type="button" class="c-button mt-3 d-block text-secondary-color-1 fw-bold bg-main-color-1 me-2">
-        Save
+        Update
     </button>
-    <button type="button" class="c-button mt-3 d-block text-secondary-color-1 fw-bold bg-danger ms-2">
+    <button type="button" class="c-button mt-3 d-block text-secondary-color-1 fw-bold bg-danger ms-2" id="delete-button">
         Delete
     </button>
 </div>
