--- a/views/page6.hbs
+++ b/views/page6.hbs
@@ -105,7 +105,7 @@
 </button>
 
 <div class="d-flex justify-content-between hidden mb-5" id="modify-container">
-    <button type="button" class="c-button mt-3 d-block text-secondary-color-1 fw-bold bg-main-color-1 me-2">
+    <button type="button" class="c-button mt-3 d-block text-secondary-color-1 fw-bold bg-main-color-1 me-2" id="update-button">
         Update
     </button>
     <button type="button" class="c-button mt-3 d-block text-secondary-color-1 fw-bold bg-danger ms-2" id="delete-button">
