feture for warning user if medicine stock running low, body temprature goes high, and medication history

--- a/views/layout/base.hbs
+++ b/views/layout/base.hbs
@@ -53,6 +53,7 @@
 <script src="/js/util/httpRequest.js"></script>
 <script src="/js/util/stringConverter.js"></script>
 <script src="/js/util/notification.js"></script>
+<script src="/js/util/timeformater.js"></script>
 {{#if scripts}}
     {{#each scripts}}
         <script src="{{this}}"></script>
