--- a/views/page12.hbs
+++ b/views/page12.hbs
@@ -1,27 +1,3 @@
- <h4 class="fw-regular weight-med fw-semibold text-secondary-color-4 me-1 mb-5 text-center"> History </h4>
-    <div class="bg-secondary-color-2 p-4 rounded-9 d-flex justify-content-between align-items-center">
-        <div>
-            <img src="/img/obat.svg" alt="">
-        </div>
-        <div>
-            <h5 class="fw-regular weight-med fw-bold text-secondary-color-4"> Panadol </h5>
-            <p class="fw-regular weight-med fw-light text-secondary-color-4 text-secondary-color-2 m-0"> X Times a Day </p>
-            <p class="fw-regular weight-med fw-light text-secondary-color-4 text-secondary-color-2 m-0"> 11/03/23 09:00 </p>
-        </div>
-        <div>
-            <img src="/img/check.svg" alt="">
-        </div>
-    </div>
-    <div class="bg-secondary-color-2 p-4 rounded-9 d-flex justify-content-between align-items-cente mt-4">
-        <div>
-            <img src="/img/obat.svg" alt="">
-        </div>
-        <div>
-            <h5 class="fw-regular weight-med fw-bold text-secondary-color-4"> Panadol </h5>
-            <p class="fw-regular weight-med fw-light text-secondary-color-4 text-secondary-color-2 m-0"> X Times a Day </p>
-            <p class="fw-regular weight-med fw-light text-secondary-color-4 text-secondary-color-2 m-0"> 11/03/23 13:00 </p>
-        </div>
-        <div>
-            <img src="/img/cross.svg" alt="">
-        </div>
-    </div>
+ <h4 class="fw-regular weight-med fw-semibold text-secondary-color-4 me-1 mb-5 text-center" > History </h4>
+ <div id="history-container">
+ </div>
