real time body temp

--- a/views/page4.hbs
+++ b/views/page4.hbs
@@ -1,6 +1,6 @@
 <div class="mb-5">
     <div class="text-center mb-5">
-        <h4 class="fw-regular">Your Body Temperature</h4>
+        <h4 class="fw-regular" id="bracelet" data-bracelet-id="{{smartBracelet}}">Your Body Temperature</h4>
     </div>
     <div class="circle">
         <div class="circletwo">
