--- a/views/layout/base.hbs
+++ b/views/layout/base.hbs
@@ -50,6 +50,7 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js"
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
 </script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="/js/util/httpRequest.js"></script>
 <script src="/js/util/stringConverter.js"></script>
 <script src="/js/util/notification.js"></script>
