register with phone number, profil with phone number, fix error bug in dashboard when showing medicine weight

--- a/views/register.hbs
+++ b/views/register.hbs
@@ -4,6 +4,7 @@
 </div>
 <form>
     <input type="text" placeholder="Username" class="mb-4" id="username">
+    <input type="text" placeholder="Phone Number" class="mb-4" id="phone">
     <input type="email" placeholder="Email" class="mb-4" id="email">
     <input type="password" placeholder="Password" class="mb-4" id="password">
     <button type="button" class="d-block mt-3" id="button">Sign Up</button>
