--- a/public/style/page2.css
+++ b/public/style/page2.css
@@ -4,33 +4,33 @@
 
 
 .profile-container{
-    width: 100%;
     height: 270px;
+    width: 100%;
 
 }
 
 .circle{
-    background-color: var(--secondary-color-1);
-    height: 150px;
-    width: 150px;
-    border-radius: 50%;
     align-items: center;
+    background-color: var(--secondary-color-1);
+    border-radius: 50%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    display: flex;
+    height: 150px;
     justify-content: center;
     margin: 0 auto;
-    display: flex;
-    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    width: 150px;
 }
 
 .circletwo{
-    background-color: #D9D9D9;
-    height: 140px;
-    width: 140px;
-    border-radius: 50%;
     align-items: center;
+    background-color: #D9D9D9;
+    border-radius: 50%;
+    display: flex;
+    height: 140px;
     justify-content: center;
     margin: 0 auto;
-    display: flex;
     overflow: hidden;
+    width: 140px;
 }
 
 .circletwo img{
@@ -41,5 +41,5 @@
 .detail-container{
     background-color: #EEF1F6;
     width: 80%;
-    height: 230px;
+    /* height: 230px; */
 }
