--- a/views/page2.hbs
+++ b/views/page2.hbs
@@ -6,9 +6,12 @@
     </div>
     <h1 class="text-secondary-color-1 fs-5 mt-2" id="fullName">Loading</h1>
 </div>
-<div class="detail-container bg-secondary-color-3 mx-5 my-5 p-5 rounded-16">
+<div class="detail-container bg-secondary-color-3 mx-5 my-4 p-5 rounded-16">
     <h6 class="fw-light">Username</h6>
     <h6 id="username">Loading</h6>
+
+    <h6 class="mt-3 fw-light">Phone Number</h6>
+    <h6 id="phone">Loading</h6>
 
     <h6 class="mt-3 fw-light">Email</h6>
     <h6 id="email">Loading</h6>
@@ -17,7 +20,7 @@
     <h6>*******</h6>
 
 </div>
-<div class="d-flex justify-content-end">
+<div class="d-flex justify-content-end mb-5">
     <a href="/logout" class="mx-5 text-decoration-none bg-danger text-secondary-color-1 px-3 py-2 rounded-3">Logout</a>
 
 </div>
