menambahkan paginasi, menambahkan alert, menambahkan notifikasi pada update suhu

--- a/views/page12.hbs
+++ b/views/page12.hbs
@@ -1,3 +1,4 @@
  <h4 class="fw-regular weight-med fw-semibold text-secondary-color-4 me-1 mb-5 text-center" > History </h4>
  <div id="history-container">
  </div>
+<p class="mb-5 mt-3 text-center pointer" id="loadMore">Load More</p>
