--- a/views/layout/base.hbs
+++ b/views/layout/base.hbs
@@ -51,6 +51,7 @@
     integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous">
 </script>
 <script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <script src="/js/util/httpRequest.js"></script>
 <script src="/js/util/stringConverter.js"></script>
 <script src="/js/util/notification.js"></script>
