--- a/views/layout/base.hbs
+++ b/views/layout/base.hbs
@@ -52,6 +52,7 @@
 </script>
 <script src="/socket.io/socket.io.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.4/moment.min.js" integrity="sha512-CryKbMe7sjSCDPl18jtJI5DR5jtkUWxPXWaLCst6QjH8wxDexfRJic2WRmRXmstr2Y8SxDDWuBO6CQC6IE4KTA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="/js/util/httpRequest.js"></script>
 <script src="/js/util/stringConverter.js"></script>
 <script src="/js/util/notification.js"></script>
